Proofread report gen sections and added sub file containing things that I learned

--- a/final_report/final.tex
+++ b/final_report/final.tex
@@ -141,7 +141,7 @@ Below is the order of usefulness of the websites:
 \subsection{What was Learned}
 \subfile{sections/learned_ernst}
 \subfile{sections/learned_nichols}
-\subsection{Javier Franco: Report Generation}
+\subfile{sections/learned_franco}
 
 %\bibliographystyle{ieeetr}
 %\bibliography{writing1}
