--- a/final_report/sections/report_generation_doc.tex
+++ b/final_report/sections/report_generation_doc.tex
@@ -1,6 +1,4 @@
 \documentclass[../final.tex]{subfiles}
-\usepackage{listings,xcolor}
-\usepackage[justification=centering]{caption}
 \begin{document}
 	\lstset{
 		string=[s]{"}{"},
@@ -14,42 +12,42 @@
 	An administrator has two options when they click on the "Edit/Create a Report" link which includes editing a report and creating a new report. When generating a report a user first selects a camp from a drop down menu. Next they select the name of the survey that they would like to generate query results for. In order to get any query results the camp must have student responses stored in the database for the surveys. Based on the survey that is selected this causes the "Select Student" drop down menu to be populated with the names of the students that took the survey. This drop down allows an administrator to select a student name and get all of their survey results by clicking the "Submit" button.\\ 
 	If the administrator wants to get all of the results of the survey questions they have the option to click a radio by clicking the "Yes". When the administrator clicks the "Submit" button it displays all of the question results of the survey. If the option is left on the "No" radio button and no student was selected this indicates that the administrator wants to generate query results for a certain question for the survey.\\ The two query types that an administrator can choose for querying certain types of questions include multiple choice and matrix and text questions. When a query type is selected and the "Add Query" button is clicked it generates a query template based on your query type selection. Furthermore, the query template contains a delete button for removing it which is indicated by a "-" symbol and an administrator can delete all of the query templates currently displayed in the webpage by clicking on the "Reset" button.\\
 	 The query result for a matrix, multiple choice, and text questions return a table that gives breakdown of the result. The table result for a text question returns the responses of the students. The table result for a multiple choice question returns a count and percentage result for each of the responses. The table result for a matrix question returns a count and a percentage result for each sub question based on the scale that was used.\\
-	  An administrator can get the change in response results for a matrix question by selecting the option both from the survey drop down and creating a query template for a matrix and text question. Then the administrator chooses the matrix question that they want a change in response result. When the administrator clicks the "Submit" button this returns a table that contains the positive responses along with a breakdown of the pre and post survey results for each of the sub question.\\
+	  An administrator can get the change in response results for a matrix question by selecting the option both from the survey drop down and creating a query template for a matrix and text question. Then the administrator chooses the matrix question that they want a change in response result. When the administrator clicks the "Submit" button this returns a table that contains the positive responses along with a breakdown of the pre and post survey results for each of the sub questions.\\
 	  An administrator can refine the query results that are returned by selecting demographic information from drop downs menus. Something to note here is that code for populating student demographic information based on their responses has not been implemented, but the PHP code is already setup for getting the student responses based on demographic information.\\
 	   The options for demographic information includes gender, parent's highest education, student race, student ethnicity, and free or reduced lunch. When an administrator has finished generating their report they will have the option to print their report by clicking on the "Print" button which displays the print options and they will also be able to save their report by clicking the "Save" button.
 	\subsection{Code Walk Through}
 	\subsubsection{Deleting All of the Query Templates}
-	When the "Reset" button that deletes all of the query templates currently displayed in the webpage is clicked it uses an onClick event to call DeleteAllQueries() function in the report\_generation.js file. This function removes all of the query templates currently displayed in the webpage by getting the parent div element called "query" that contains all of the child query templates. It then uses a while loop to delete all of the child query div templates from the parent and decrements the count variable that is used in assigning a unique identifiers to each query template.
+	When the "Reset" button is clicked it uses an onClick event to call DeleteAllQueries() function in the report\_generation.js file. This function removes all of the query templates currently displayed in the webpage by getting the parent div element called "query" that contains all of the child query templates. It then uses a while loop to delete all of the child query div templates from the parent and decrements the count variable that is used in assigning a unique identifier to each query template.
 	\subsubsection{Deleting a Query Template}
 	When the delete button of a query template is clicked it uses an onClick event to call the removeElement() function in report\_generation.js. The function receives the ID values of the query template and the ID of the parent that contains the query templates. It then removes the query template from the parent and decrements the count variable used for making unique identifiers for the query templates.  
 	\subsubsection{Deleting a Query Result}
-	When the delete button for a query result is clicked it uses an onClick event to call the removeChild() function in report\_generation.js. The function receives the ID of the query result. The query results is deleted by first getting the parent that contains all of the query results called "query" and removes the child query template based on the Id that was received and decrements the count2 variable used for making unique identifiers. 
+	When the delete button for a query result is clicked it uses an onClick event to call the removeChild() function in report\_generation.js. The function receives the ID of the query result. The query results is deleted by first getting the parent that contains all of the query results called "query" and removes the child query template based on the ID that was received and decrements the count2 variable used for making unique identifiers. 
 	\subsubsection{Creating a Query Template} 
-	When the "Add Query" button is clicked it calls the AddQuery() function in report\_generation.js. The query template for both types consists of a drop down menu and a delete button. Each query template is assigned a unique identifier by incrementing the global count variable. The query template is displayed in the web page by adding it to the parent element called "query". For populating the drop down menu the ID of the survey that was selected is obtained first by getting its value. The survey ID is sent to GetQuestionDopDown.php using an xmlhttp request. In GetQuestionsDropDown.php the survey questions are obtained by using a mysql statement that gets the arr\_questions attribute from the Survey table that matches the survey ID that was received. It then returns the questions of the survey by using an echo statement. The questions in the drop down menu are displayed based on the query type and survey name that was selected by adding <option> tag elements to the drop down menu that contain question text and id. 
+	When the "Add Query" button is clicked it calls the AddQuery() function in report\_generation.js. The query template for both types consists of a drop down menu and a delete button. Each query template is assigned a unique identifier by incrementing the appropriate global count variable. The query template is displayed in the web page by adding it to the parent element called "query". For populating the drop down menu the ID of the survey that was selected is obtained first by getting its value. The survey ID is sent to GetQuestionDopDown.php using an xmlhttp request. In GetQuestionsDropDown.php the survey questions are obtained by using a mysql statement that gets the arr\_questions attribute from the Survey table that matches the survey ID that was received. It then returns the questions of the survey by using an echo statement. The questions in the drop down menu are displayed based on the query type and survey name that was selected by adding option tag elements to the drop down menu that contain question text and id. 
 	\subsubsection{Displaying the Names of the Camps}
-	To display all of the names of the camps in the camp drop down menu an onload event is used to call the GetCamps() function. The function uses an xmlhttp request to get the names of the camps by calling GetCamps.php. In GetCamps.php a mysql statement is used to get the camp\_name and camp\_id of each of the camps from the Camp table. The camp\_id is used to assign a value to each camp that is used for querying purposes. Next a while loop is used to echo out the name of each camp as an html element using the <option> tag. Back in the JavaScript side in the function the inner HTML of the drop down menu is set equal to the request response which contains the names of the camps, so that they can be displayed in the web page.
+	To display all of the names of the camps in the camp drop down menu an onLoad event is used to call the GetCamps() function. The function uses an xmlhttp request to get the names of the camps by calling GetCamps.php. In GetCamps.php a mysql statement is used to get the camp\_name and camp\_id of each of the camps from the Camp table. The camp\_id is used to assign a value to each camp. Next a while loop is used to echo out the name of each camp as an HTML element using the option tag. Back in the JavaScript side in the function the inner HTML of the drop down menu is set equal to the request response which contains the names of the camps, so that they can be displayed in the web page.
 	\subsubsection{Displaying the names of Surveys}
-	To display the names of the surveys based on the camp that is selected an onChange event is used in the camp drop down menu to call the GetSurveys() function. The GetSurveys() function uses the same procedure that I mentioned for displaying the names of the camps. It first gets the value of the camp that was selected which contains the camp\_id then it uses an xmlhttp request to send the camp\_id to GetSurveys.php. In GetSurveys.php the first mysql statement is used to get the row in the Camp table that matches the camp\_id that was received in order to get the survey\_id of the pre and post surveys. Next two mysql statements are used to get the two rows in the Survey table that match the pre and post survey\_id values and echo statements are used to return <option> elements that contain the title of pre or post survey and corresponding survey\_id value. Back in the report\_generation.js file in the function the names of the surveys are displayed by setting the inner HTML of the survey drop down equal to the request response from GetSurveys.php. 
+	To display the names of the surveys based on the camp that is selected an onChange event is used in the camp drop down menu to call the GetSurveys() function. The GetSurveys() function uses the same procedure that I mentioned for displaying the names of the camps. It first gets the value of the camp that was selected which contains the camp\_id then it uses an xmlhttp request to send the camp\_id to GetSurveys.php. In GetSurveys.php the first mysql statement is used to get the row in the Camp table that matches the camp\_id that was received in order to get the survey\_id of the pre and post surveys. Next two mysql statements are used to get the two rows in the Survey table that match the pre and post survey\_id values and echo statements are used to return option elements that contain the title of pre or post survey and corresponding survey\_id value. Back in the report\_generation.js file in the function the names of the surveys are displayed by setting the inner HTML of the survey drop down equal to the request response from GetSurveys.php. 
 	\subsubsection{Displaying the names of the Students}
-	To display the names of the students based on the survey and camp that was selected and onChange function is used in the survey drop down in the report\_generation.php page to call the GetStuds() function. The GetStuds() function first gets the ID values of the camp and survey that was selected and uses an xmlhttp request to send both ID values to GetStuds.php. In GetStuds.php a mysql statement is used to get the rows of from the Response table that match the survey\_id and camp\_id that were received. A while loop is used to get the the reponder\_id of each row and adds it to an array called StudIDs. Next a for loop is used to iterate through each responder\_id value stored in the array and a mysql statement is used to get the information of the student from the Responder table. If the student's information was found then a while loop is used to echo out an <option> tag that contains the first\_name and last\_name of the student and its value is set to the corresponding responder\_id. Back in JavaScript side in the GetStuds() function the inner html of the student drop down menu is set equal to the request response, so that the names of the students will  be displayed in the drop down menu. 
+	To display the names of the students based on the survey and camp that was selected and onChange function is used in the survey drop down in the report\_generation.php page to call the GetStuds() function. The GetStuds() function first gets the ID values of the camp and survey that was selected and uses an xmlhttp request to send both ID values to GetStuds.php. In GetStuds.php a mysql statement is used to get the rows from the Response table that match the survey\_id and camp\_id that was received. A while loop is used to get the the reponder\_id of each row and adds it to an array called StudIDs. Next a for loop is used to iterate through each responder\_id value stored in the array and a mysql statement is used to get the information of the student from the Responder table. If the student's information was found then a while loop is used to echo out an option  tag that contains the first\_name and last\_name of the student and its value is set to the corresponding responder\_id. Back in JavaScript side in the GetStuds() function the inner html of the student drop down menu is set equal to the request response, so that the names of the students will be displayed in the drop down menu. 
 	\subsubsection{Saving a Report}
-	When the "Save" button is clicked it uses an onClick event to call the Report\_JSON () function in report\_generation.js. The Report\_JSON () function creates a JSON object called report\_json, as shown in Listings1: report\_json. It first sets the attribute of the ReportID equal to the SaveReportID global variable for saving purposes and sets the title attribute equal to the value of the HTML element called "TitleReport". Next a while loop is used to save each table result based on its type by creating a JSON object called result\_json, as shown in Listings 2: result\_json. The result\_json object contains the type of the table result and an array that contains an array of row values for the table result. Then the result\_json is added to the queryResults array attribute in the report\_json object. Once all of the table results have been saved to the report\_json object the report results are saved by calling the SaveReportJSON() function in report\_generation.js. The function receives the report\_json object and uses and xmlhttp request to send it to the SaveReport.php. In SaveReport.php it first gets the values of report\_json object that was received which includes ReportID, title, and queryResults. If the ReportID attribute is equal to null it creates a new row containing the reports information in the Report table and returns the ID of the newly saved report back to JavaScript using an echo statement. If the ReportID is not equal to null it updates the reports information in the Report table and returns the ID of the report back to JavaScript using an echo statement. Back in the JavaScript side the SaveReportJSON function receives the report's ID and sets it the global variable SavedReportID equal to it. 
+	When the "Save" button is clicked it uses an onClick event to call the Report\_JSON () function in report\_generation.js. The Report\_JSON () function creates a JSON object called report\_json, as shown in Listings1: report\_json. It first sets the attribute of the ReportID equal to the SaveReportID global variable for saving purposes and sets the title attribute equal to the value of the HTML element called "TitleReport". Next a while loop is used to save each table result based on its type by creating a JSON object called result\_json, as shown in Listings 2: result\_json. The result\_json object contains the type of the table result and an array that contains an array of row values for the table result. Then the result\_json is added to the queryResults array attribute in the report\_json object. Once all of the table results have been saved to the report\_json object the report results are saved by calling the SaveReportJSON() function in report\_generation.js. The function receives the report\_json object and uses and xmlhttp request to send it to the SaveReport.php. In SaveReport.php it first gets the values of report\_json object that was received which includes ReportID, title, and queryResults. If the ReportID attribute is equal to null it creates a new row containing the reports information in the Report table and returns the ID of the newly saved report back to JavaScript using an echo statement. If the ReportID is not equal to null it updates the reports information in the Report table and returns the ID of the report back to JavaScript using an echo statement. Back in the JavaScript side the SaveReportJSON function receives the report's ID and sets the global variable SavedReportID equal to it. 
 	
 	\subsubsection{Displaying an Edit Report Results}
 	In the SelectReportChoice.html page when the name of a report is selected to edit and the corresponding "Submit" button is clicked the SaveData() function is called which passes the ID of the selected report to edit\_report.php. When the admin is redirected to the edit\_report.php page an onload event is used to call the GenSavedReport() function to generate the results of the report. The ID of the report that was selected is sent to GetReportSelected.php to get the report results using an xmlhttp request. In GetReportSelected.php the reports results are obtained by using a mysql statement that gets the arr\_results and title attribute values from the Report table based on the ID that was received. The title and arr\_results are stored in a JSON object that is returned to JavaScript using an echo statement. When the JSON object is received in the JavaScript side the results of the report are generated by iterating through the array\_results and calling the GenTableQuery() function in report\_generation.js. After the results have been generated the title is displayed by setting the value of the HTML element called "TitleReport" equal to the title of the report that was received. 
 	
 	\subsubsection{Get a Student's Survey Results}
-	The section of code that handles getting a student's survey results in the ReturnResult() function is the if statement that checks if the SelectedStudID attribute in queryJSON is not equal to the value "Default". This means that a student was selected to get their survey results. The table element is created and set equal to the table result returned by the CreateStudentSurvey() function. The CreateStudentSurvey() function creates a table containing all of the students survey results by iterating through their responses.
+	The section of code that handles getting a student's survey results in the ReturnResult() function is the if statement that checks if the SelectedStudID attribute in queryJSON is not equal to the value "Default". This means that a student was selected to get their survey results. A table element is created and set equal to the table result returned by the CreateStudentSurvey() function. The CreateStudentSurvey() function creates a table containing all of the students survey results.
 	
 	\subsubsection{Get All of the Question Results of a Survey}
 	The section of code that handles getting all of the question results of a survey is in the ReturnResult() function in the else if statement that checks if HTMTL element "AllResultsYes" is checked. A for loop is used to get the results for each survey question and if/else statements are used to call the appropriate function depending on the question type. If the question type is "text" it calls the TextQuestionResult() function, if the type is "multic" it calls the MultipleChoiceResult() function, and if the type is matrix it calls the MatrixQuestionResult() function. 
 		
 	\subsubsection{Get the Results of a Query Template}
-	The section of code that handles getting the result for a query template  is the ReturnResult() function. The else statement that handles this part iterates through each query template. It first finds the index of the question in a student's pre or post responses that matches the question ID of the query template. If the query template question type is for a multiple choice question it calls the MultipleChoiceResult() function to get the result. If the query template question type is for a text question it calls the TextQuestionResult() function to get the result. If the question type is for matrix question and it is not for a change in response it calls the MatrixQuestionResult() function. Otherwise the query template is for a change in response for a matrix question which requires finding the index of the query template question in the post survey results. For each sub question for the matrix question two for loops are used to get the pre and post student responses using the two indexes that were found. If/else statements are used to calculate the results for each scale option and also for keeping track of the total number of positive responses. A row is produced for each sub question and added to a table. Once the results for each sub question have been calculated the table is added a div along with a delete button and is displayed on the web page by adding it to the parent element called "QueryResult". 
+	The section of code that handles getting the result for a query template  is the ReturnResult() function. The else statement that handles this part iterates through each query template. It first finds the index of the question in a student's pre or post responses that matches the question ID of the query template. If the query template question type is for a multiple choice question it calls the MultipleChoiceResult() function to get the result. If the query template question type is for a text question it calls the TextQuestionResult() function to get the result. If the question type is for matrix question and it is not for a change in response it calls the MatrixQuestionResult() function. Otherwise the query template is for a change in response for a matrix question which requires finding the index of the query template question in the post survey results. For each sub question for the matrix question two for loops are used to get the pre and post student responses using the two indexes that were found. If/else statements are used to calculate the results for each scale option and also for keeping track of the total number of positive responses. A row is produced for each sub question and is added to a table. Once the results for each sub question have been calculated the table is added a div along with a delete button and is displayed on the web page by adding it to the parent element called "QueryResult". 
 	
 	
 	\subsubsection{Getting the Survey and Student(s) Responses}
-	The code that handles returning the student responses and survey information based on the demographic information, student name, survey option, and camp that the user selected is ReportQuerying.php. A JSON object is used to return the survey and student responses, as shown in Listings 5. The survey questions are obtained using a mysql statement to get the arr\_results attribute from the Survey table where it matches the survey ID that was received. Next a mysql statement is constructed using the demographic information that was received and it is used to get the IDs of the students that match the criteria from the Responder table and stores them into an array. If the Survey name is "Both" and student ID for getting a certain student is "Default" the Student's information and responses for both the pre and post survey are obtained only if their id is in the array of filtered ids. The student information and responses are stored in a JSON object, as shown in Listings 6 and are added to the corresponding SurveyResponses array. The same process is used for getting the student responses and information for a pre or post survey only. If the ID of a certain student was received then only their survey results are obtained. To return the JSON object that contains the survey questions and the student survey responses an echo statement is used to send it back to JavaScript. 
+	The code that handles returning the student responses and survey information based on the demographic information, student name, survey option, and camp that the user selected is ReportQuerying.php. A JSON object is used to return the survey and student responses, as shown in Listings 5. The survey questions are obtained using a mysql statement to get the arr\_results attribute from the Survey table where it matches the survey ID that was received. Next a mysql statement is constructed using the demographic information that was received and it is used to get the IDs of the students that match the criteria from the Responder table and stores them into an array. If the Survey name is "Both" and student ID for getting a certain student is "Default" the Student's information and responses for both the pre and post survey are obtained only if their id is in the array of filtered ids. The student information and responses are stored in a JSON object, as shown in Listings 6 and is added to the corresponding SurveyResponses array. The same process is used for getting the student responses and information for a pre or post survey only. If the ID of a certain student was received then only their survey results are obtained. To return the JSON object that contains the survey questions and the student survey responses an echo statement is used to send it to JavaScript. 
 	
 	
 \begin{lstlisting}[caption={report\_json }]
